REMOVE LANGUAGE ENTITY - enum is enough and greatly simplifies everything Fixed test/prod FE bug - now I only have one, 9998 Changed services/repos to work directly with Learner rather than User - would be easier to decouple if needed Fixed schemas, added card properties UUID shouldn't be lowercase added SetupDataLoader again added entity graph to build user info